NCL-9481 - Use virtual threading, upgrade to java 21